@@ -123,13 +123,19 @@ namespace irr
 			return false;
 		}
 
+		//! Returns the reference counter.
+		s32 getReferenceCount() const
+		{
+			return ReferenceCounter;
+		}
+
 		//! Returns the debug name of the object. The Debugname may only be set and
 		//! changed by the object itself. This method should only be used in Debug mode.
 		//! \return Returns a string, previously set by setDebugName();
 		const c8* getDebugName() const
 		{
 			return DebugName;
-		} 
+		}
 
 	protected:
 
